--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc-version = "0.8.24"
+optimizer = true
+optimizer-runs = 200
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 remappings = [
